tests/negative/issue1344/M.juvix
module M;
  import Other;

  type Unit :=
  t : Unit;

  u : Other.Unit;
  u := t;

end;
